# FormulaSnap

./: .gitignore  AGENT.md  PRD.md  PROGRESS.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vitest.config.ts
.github/workflows/: release.yml
.kiro/specs/formula-snap/: design.md  requirements.md  tasks.md
models/: README.md  pix2tex.onnx
scripts/: build_ocr.py  export_onnx.py  ocr_server.py  test_omml.py
src/: App.test.tsx  App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  test_conv.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/ocr_engine/: .gitkeep
src-tauri/proptest-regressions/: convert.txt  history.txt  preprocess.txt
src-tauri/src/: capture.rs  clipboard.rs  convert.rs  export.rs  history.rs  lib.rs  main.rs  ocr.rs  preprocess.rs
src/components/ActionBar/: ActionBar.test.tsx  ActionBar.tsx
src/components/CaptureOverlay/: CaptureOverlay.test.tsx  CaptureOverlay.tsx  index.ts
src/components/FormulaEditor/: FormulaEditor.test.tsx  FormulaEditor.tsx  index.ts  useUndoRedo.ts
src/components/FormulaPreview/: FormulaPreview.property.test.ts  FormulaPreview.test.tsx  FormulaPreview.tsx  index.ts
src/components/HistoryPanel/: HistoryPanel.test.tsx  HistoryPanel.tsx  index.ts
src/hooks/: useImageInput.property.test.ts  useImageInput.test.ts  useImageInput.ts
src/store/: formulaStore.property.test.ts  formulaStore.test.ts  formulaStore.ts
src/types/: index.ts
