[package]
name = "formula-snap"
version = "0.1.0"
description = "FormulaSnap - 离线桌面端公式截图识别工具"
authors = ["FormulaSnap"]
edition = "2021"

[lib]
name = "formula_snap_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
image = "0.25"
ndarray = "0.17"
ort = "2.0.0-rc.11"
latex2mathml = "0.2"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
clipboard-win = "5"
quick-xml = { version = "0.37", features = ["serialize"] }
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
proptest = "1"
